Fixed section page height on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
 		grid-template-columns: 100%;
 	}
 
-	header, footer {
+	header, footer, .full-height {
 		height: -moz-available;
 		height: -webkit-fill-available;
 		height: fill-available;
